<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/main_title"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@android:drawable/ic_menu_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="649dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/wifi_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/wifi" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/wifi"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/wifi_sum"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connected_device_l"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/connected_device" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/connected_device"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/connected_device_sum"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/app_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="38dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/app"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/app_sum"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/battery_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="28dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/battery" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/battery"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/battery_sum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/display"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/display" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/display"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/display_sum"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="38dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/sound"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/sound_sum"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/storage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="27dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/storage"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/storage_sum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:textColor="#404040" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/safe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="34dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/safe"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/safe_sum"
                            android:textColor="#404040" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="2dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="34dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:background="@drawable/app" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/about"
                            android:textColor="@color/blue"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:paddingLeft="10dp"
                            android:text="@string/about_sum"
                            android:textColor="#404040" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>